--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:h2:mem:database
 spring.datasource.name=database
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.open-in-view=false
+spring.jpa.open-in-view=true
 server.error.include-message=always
 spring.datasource.username=
 spring.datasource.password=
