--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 server.port=8080
-logging.level.org.springframework.jpa=debug
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:database
-spring.datasource.name=database
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.open-in-view=true
-server.error.include-message=always
-spring.datasource.username=
-spring.datasource.password=
+driverClassName=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:D:/IdeaProjects/BankOP/database/database.sqlite
+spring.jpa.database.url=jdbc:sqlite:D:/IdeaProjects/BankOP/database/database.sqlite
+spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+spring.jpa.open-in-view=false
